Fixed a mangled link

--- a/F18/322F18.HTM
+++ b/F18/322F18.HTM
@@ -91,7 +91,7 @@ border="0"></A><br>
                     HREF="../errata/Sedra_Smith/7th/S_S_7_ER.HTM"
                      >Textbook Errata</A>                    </P> 
 
-         <P style="text-align: center;"><A target="_top" HREF = "..//index.html"
+         <P style="text-align: center;"><A target="_top" HREF = "../index.html"
               >Professor De Boer's Homepage</A>.             </P>
 
 <!-- UNCOMMENT FOR INSTRUCTURE ---------------------------------
