Added files for EGR 322 F18 to the Canvas_Common directory

--- a/F18/322F18.HTM
+++ b/F18/322F18.HTM
@@ -91,14 +91,14 @@ border="0"></A><br>
                     HREF="../errata/Sedra_Smith/7th/S_S_7_ER.HTM"
                      >Textbook Errata</A>                    </P> 
 
-         <P style="text-align: center;"><A target="_top" HREF = "../index.html"
+         <P style="text-align: center;"><A target="_top" HREF = "https://dfdeboer.github.io/index.html"
               >Professor De Boer's Homepage</A>.             </P>
 
 <!-- UNCOMMENT FOR INSTRUCTURE ---------------------------------
                            <p style="text-align: center";><small>
 (The information in this frame is available outside of 
 Canvas@Dordt on the World Wide Web via the <a href=
-"..//F16/322F16.HTM"  
+"https://dfdeboer.github.io/F18/322F18.HTM"  
 >public web portal</a> to this course).              </small></p>
 -----UNCOMMENT FOR INSTRUCTURE------------------------------ -->
 <!-- INSTRUCTURE STOP CUT HERE  -->   
