Updated EGR 322 assignment page

--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -48,7 +48,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 12/09/2016 1:13 pm)
+                              >(Last update: 8/23/2018 3:58 pm)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -146,12 +146,12 @@ PS                                                           <BR>
         8/29
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        0/03
+        8/31
 
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		<a href=
-        "https://dordt.instructure.com/files/92854011/download?download_frd=1"
-        >9/02</a><br>
+		<!-- <a href=
+        "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"
+        > -->Ex-<br>pect-<br>ed<br>9/03</a><br>
         <br>
         See<br>
         notes<br>
@@ -164,7 +164,7 @@ PS                                                           <BR>
         textbook and/or the "Introduction to Electrical<BR>&nbsp;
         Engineering" handout on Canvas@Dordt             <A HREF=
         "https://dordt.instructure.com/files/129457714/download?download_frd=1"
-                                >here</A><sup>9</sup>, <BR>&nbsp;
+                                ><font color="0099FF">here</font></A><sup>9</sup>, <BR>&nbsp;
         and/or see Sedra & Smith <a href=
         "http://global.oup.com/us/companion.websites/9780199339136/student/app/app_d"
                            >Appendix D</a>.  Also      <br>&nbsp;
@@ -244,7 +244,7 @@ Note 8)
 If you are having difficulty reading the latest version of this 
 page it may have to do with your browser's cached memory. Read 
 this <a 
-href="../../ddb/notes18.htm">note on 
+href="../../ddb/NOTES18.HTM">note on 
 cached pages</a> to solve the problem. 
 
                          <BR><BR><TR><TD width="60" valign="top">
