Fixing typos in errata of A & S

--- a/errata/Alexander_Sadiku/6th/A_S_6_ER.HTM
+++ b/errata/Alexander_Sadiku/6th/A_S_6_ER.HTM
@@ -101,8 +101,8 @@ Page 4.  Eight lines from the bottom of the page
 Page 10.  Starting at the 3rd line just above Section 1.5</b><br> 
    time-varying voltage is called an <i>ac voltage</i> and is 
    represented by <i>v</i>. A <del>dc</del>
-   <br><ins>battery is a typical source of dc voltage. A generator 
-   is a typical source of ac voltage.</ins><br>
+   <br><ins>battery is typically a source of dc voltage. A generator 
+   is typically a source of ac voltage.</ins><br>
    <del>voltage is commonly produced by a battery; ac voltage is 
    produced by <br>an electric generator.</del>              <br>   
                                          <br><span class=comment>
@@ -116,8 +116,8 @@ Page 10.  Starting at the 3rd line just above Section 1.5</b><br>
                                            <A NAME=ERR_16></A><b> 
 Page 16.  Last paragraph on the page and Figure 1.17 on page 17</b><br> 
                                              <span class=comment>
-   This paragraph is so far out of date as to be classified as
-   errata because CRTs and iconoscopes (especially iconoscopes) are 
+   This paragraph is so far out-of-date as to be classified as
+   errata.  CRTs and iconoscopes (especially iconoscopes) are 
    no longer in use.  The interested reader may prefer to consult 
    articles in Wikipedia to find modern background information on 
    these topics.  See especially <a 
@@ -145,7 +145,7 @@ Page 17.  The section labeled "Historical."</b><br>
                                       </i></small></span><br><br>
 									  
                                            <A NAME=ERR_17></A><b> 
-Page 42.  Figure 2.26</b><br> 
+Page 42.  Practice Problem 2.7, Figure 2.26</b><br> 
                                              <span class=comment>
    The label on the arrow near the 2 &Omega; resistor is incorrect.
    Delete the "over 3" portion of the label so that it is simply 
