--- a/errata/Alexander_Sadiku/6th/A_S_6_ER.HTM
+++ b/errata/Alexander_Sadiku/6th/A_S_6_ER.HTM
@@ -255,7 +255,7 @@ Page 247.  Problem 6.64, Part (a) and Figure 6.86
    used in Figure 6.86 and the general order of flow of ideas from 
    right-to-left in the textbook's schematic is counter-intuitive.  
    A better schematic of the exact same circuit with a correct 
-   symbol for the switch and with the flow of ideas arrnged from 
+   symbol for the switch and with the flow of ideas arranged from 
    left-to-right is shown below.  <br>
    <img src="IMG_4598_Figure_6p86page247_cropped_edited_web.png" alt="[image file not found]">
    <!--in <a href=
