Fixed broken link to home phone

--- a/integrity.htm
+++ b/integrity.htm
@@ -380,7 +380,7 @@ For occasional help, you may call or visit Professor De Boer at
 his office (722-6245) during the daytimes.  You may also call him 
 at home Monday through Saturday before 10 PM 
 (<img 
-src="http://homepages.dordt.edu/~ddeboer/cd_common/HWSTD/home_ph.gif">).  
+src="cd_common/HWSTD/home_ph.gif">).  
 </p><p> 
 
 If you need (or want) help more frequently, consult the secretary 
