fixed spelling error, colorodo to colorado

--- a/ddb_courses.html
+++ b/ddb_courses.html
@@ -226,7 +226,7 @@
 		
 		<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 		<p align="center"><b>Courses that Professor De Boer has taught 
-		at <br>The University of Colorodo at Colorado Springs (UCCS)</b><br><small>
+		at <br>The University of Colorado at Colorado Springs (UCCS)</b><br><small>
 		From F91 through S94 Professor De Boer was on a leave of absence from Dordt College to UCCS.<br>
 		(Course numbers are UCCS's numbers)</small></p><p>
 		
