posted errata on page 108

--- a/errata/Alexander_Sadiku/6th/A_S_6_ER.HTM
+++ b/errata/Alexander_Sadiku/6th/A_S_6_ER.HTM
@@ -48,7 +48,7 @@
            DORDT COLLEGE ENGINEERING DEPARTMENT</a><br> 
 <a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                    (last update 8/23/2018)<br>
+                    (last update 8/27/2018)<br>
                                <br>
    <img src="A_S_6th_Cover_120x154.jpg" width="120" height="154"
                     alt="textbook cover"><br>
@@ -207,14 +207,26 @@ Page 103.  The paragraph just above Example 3.10 and other
    >Connect</a> for the 6th edition.  The comment in the right-hand
    column of page 103 and Example 3.10 also should be edited to 
    redirect the reader from "Appendix D" to the tutorial on 
-   McGraw Hill's "Connect" website. 
-                                   </span><br>
+   McGraw Hill's "Connect" website.                   </span><br>
+   
    The reader is expected to review Sections D.1 through 
    D.3 <del>of Appendix D</del> <ins>in this</ins> <a href=
    "http://highered.mheducation.com/sites/dl/free/0078028221/938341/PSpice_tutorial.pdf"
    >tutorial on PSpice</a> before proceeding in this section. . . . 
                            <small><i> &nbsp; &nbsp; &nbsp; &nbsp;
    (Posted 1/05/2017.)                </i></small></span><br><br>
+   
+                                          <A NAME=ERR_108></A><b> 
+Page 108.  Example 3.12, first equation in the solution
+                                     </b><br><span class=comment> 
+   A zero is missing.  The "20" should be "200."  The correrct equation is. . .
+                                                      </span><br>
+   &ndash;4 + <i>I<sub>B</sub></i>(20<ins>0</ins> &times; 
+   10<sup>3</sup>) + <i>V<sub>BE</sub></i> = 0<span class=comment>
+                           <br><small><i> &nbsp; &nbsp; &nbsp; &nbsp;
+      (Posted 8/27/2018 courtesy of e-mail from Jon H. Peterson.) 
+                </i></small></span><br><br>
+
 
                                           <A NAME=ERR_110></A><b> 
 Page 110.  Practice Problem 3.13
