Changed a few words in gds.htm to clarify the language. Updated syllabus to Leah Zuidema's specification, ref. e-mail dated 8/24/2018 at 3:07 PM

--- a/GDS.HTM
+++ b/GDS.HTM
@@ -124,8 +124,8 @@ De&nbsp;Boer calculates course grades he ignores all the raw
 point scores and other feedback he may have given students.  
 (Exception: If a course grade falls on or very near a 
 borderline, he will consider those and other factors such as 
-class participation when deciding to round  the grade up or 
-down.)<br>
+upward or downward trending grades when deciding to round the 
+course grade up or down.)<br>
 
 <p><b>Minor Items (like homework) Earn Points</b><br>
 Each minor item is assigned a point value.  A homework problem of 
@@ -234,7 +234,7 @@ just one more point earned, this student would have had an
                                                </small></blockquote>
 
 In calculation of the course grade only the letter grade for the 
-homework is carried forward into the grade-point calculation.<br><br> 
+homework is carried forward into the course grade calculation.<br><br> 
 
 <B>Grade-Point Based Calculations</B><BR> 
 Grade points are the numeric basis for calculating the course 
@@ -321,7 +321,7 @@ into it.  That spreadsheet computes the course grades.  Then Prof.
 De&nbsp;Boer manually enters the "CourseGrade" into the grade book 
 at Canvas and submits the grade to the registrar.  <br><br>
 
-<small><i>This page was last updated on 1/08/2018.</i></small>
+<small><i>This page was last updated on 8/28/2018.</i></small>
 
 <!--"Course total" is the (useless) item that courses@dordt 
 calculates willy-nilly and that you should ignore.  "CourseGrade" 
