new schedule, replaced a missing file

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
 <HR>
 <br>
 <a name="Office_Hours"></a>
-<H1>Office Hours, Spring 2018</H1>
+<H1>Office Hours, Fall 2018</H1>
 <blockquote>
-     8:30 AM &ndash; 10:50 AM Mondays and Wednesdays, or by appointment <br>(recommended--set up an appointment by e-mail.)<br><br>
+     2:00 PM &ndash; 3:00 PM and Fridays, or by appointment <br>(recommended--set up an appointment by phone or e-mail.)<br><br>
 	 
      Meet me in person or via phone, chat, etc.  <br>
      I "chat" via Microsoft Skype for Business.  <br>
@@ -123,7 +123,7 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
      or elsewhere and want to talk, just <i>pick up your phone and 
      call</i>. <BR><br> 
 
-     Here is Prof. De Boer's general <b><A HREF="S18/SCH_S18.PDF" 
+     Here is Prof. De Boer's general <b><A HREF="SF8/SCH_F18.pdf" 
      >Weekly Schedule</A></b>.<br>
 	 Professor De Boer is now working for Dordt College on a half-time basis.
 	 </blockquote><br>
@@ -468,7 +468,7 @@ An archive of the blog site was saved but the site was not put back up. No plan 
 
 <br><br><br>
 <HR width = 20% align = "left">
-<small>This page last edited on 1/06/2018.</small><BR><br><br>&nbsp;
+<small>This page last edited on 8/29/2018.</small><BR><br><br>&nbsp;
  
 
 </DIV></TD></TR></TABLE>
