added the word "Wednesdays" in my homepage

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
 <a name="Office_Hours"></a>
 <H1>Office Hours, Fall 2018</H1>
 <blockquote>
-     2:00 PM &ndash; 3:00 PM and Fridays, or by appointment <br>(recommended--set up an appointment by phone or e-mail.)<br><br>
+     2:00 PM &ndash; 3:00 PM Wednesdays and Fridays, or by appointment <br>(recommended--set up an appointment by phone or e-mail.)<br><br>
 	 
      Meet me in person or via phone, chat, etc.  <br>
      I "chat" via Microsoft Skype for Business.  <br>
