fixed broken link to schedule

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
      or elsewhere and want to talk, just <i>pick up your phone and 
      call</i>. <BR><br> 
 
-     Here is Prof. De Boer's general <b><A HREF="SF8/SCH_F18.pdf" 
+     Here is Prof. De Boer's general <b><A HREF="S18/SCH_F18.pdf" 
      >Weekly Schedule</A></b>.<br>
 	 Professor De Boer is now working for Dordt College on a half-time basis.
 	 </blockquote><br>
