Updated slide index

--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -93,13 +93,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
 	  8/27<!-- --</a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/133501249/download?download_frd=1"><!-- -->
-      8/29<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
-      8/31<!-- --</a><!-- --></td>
+      8/29<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/133666076/download?download_frd=1"><!-- -->
+      8/31<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><font color=grey>Registration and advising day, no class</font><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Intro, How this course fits in engr'g, Be Coachable<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Transducers, Frequency & Spectrum<!--end comment--></td>  
    </TR><!-- Week of 9/03------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
