--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -48,7 +48,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 8/31/2018 2:15 pm)
+                              >(Last update: 9/04/2018 10:58 am)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -176,9 +176,9 @@ PS                                                           <BR>
         8/31
 
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		<!-- <a href=
-        "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"
-        > -->Ex-<br>pect-<br>ed<br>9/03</a><br>
+		<a href=
+        "https://dordt.instructure.com/files/133815349/download?download_frd=1"
+        ><!-- Ex-<br>pect-<br>ed<br>-->9/03</a><br>
         <br>
         See<br>
         notes<br>
