Updated clarification of P2.77 in Sedra and Smith errata, cleaned up homework assignments

--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -48,7 +48,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/05/2018 3:14 pm)
+                               >(Last update: 9/05/2018 5:29 pm)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -128,6 +128,12 @@ PS                                                           <BR>
 		(Some of these problems will be moved to a     <br>&nbsp;
 		later assignment.)                             <br>&nbsp;
 		                                               <br>&nbsp;
+        Note errata on <a href=
+        "../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P121"
+                                            >+D2.34</a><br>&nbsp;
+        Also see the clarification of <a href=
+        "../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P121_A"
+                            >+D2.34 part (b)</a>.      <br>&nbsp;
         Note clarification of problem <a href=
         "../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P127_A"
                               >*2.77</a>               <br>&nbsp;
@@ -158,13 +164,9 @@ PS                                                           <BR>
         1.67, 1.72.                                    <br>&nbsp;
         Note clarification of problem <a href=
         "../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P48_A"
-                              >+1.25</a>               <br>&nbsp;
-        Note errata on <a href=
-        "../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P121"
-                                            >+D2.34</a><br>&nbsp;
-        Also see the clarification of <a href=
-        "../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P121_A"
-                            >+D2.34 part (b)</a>.
+                              >+1.25</a>               <br>&nbsp;<small>
+		(On Wed. 9/05 the Ch. 2 problems that were on this </small><br>&nbsp;<small>
+		assignment were moved to the next assignment.)</i></small>
                                                       
 
 <!-- ------------------------------------------ --></TD></TR><TR>
