Posted solutions to PS#2, EGR 322

--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/07/2018 3:16 pm)
+                               >(Last update: 9/08/2018 9:59 pm)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -158,9 +158,9 @@ PS                                                           <BR>
         9/07
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"
-        >9/09</a><br>-->
+		<a href=
+        "https://dordt.instructure.com/files/134086786/download?download_frd=1"
+        >9/10</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Frequency content of signals, amplifier<br>&nbsp; 
 		input resistance, output resistance, gain, dB, <br>&nbsp;
