Posted today's slides for EGR 322

--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -119,13 +119,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/134176418/download?download_frd=1"><!-- -->
 	  9/10<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/134322232/download?download_frd=1"><!-- -->
-      9/12<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
-      9/14<!-- --</a><!-- --></td>
+      9/12<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/134426374/download?download_frd=1"><!-- -->
+      9/14<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Ch 2: Ideal op-amp, diff vs. single-ended, common mode, inverting config.<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->P2.7, 19, 51, 62; Closed- and open-loop gain<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Closed-loop gain of non-ideal inverter, diff amp, instrumentation amp<!--end comment--></td>  
    </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
