Updated the assignment page for egr 322

--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/08/2018 9:59 pm)
+                               >(Last update: 9/14/2018 2:58 pm)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -97,22 +97,44 @@ PS                                                           <BR>
         "https://dordt.instructure.com/files/94616116/download?download_frd=1"
         >9/28</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        Topics:  Op-amp DC imperfections, slew rate,   <br>&nbsp;
-		FB Bandwidth.Diodes&mdash;Ideal, models of real<br>&nbsp;
-		diodes under fwd and rev bias, rev breakdown.<br>&nbsp;
-		Read 2.5 through 2-8, 4.1 through 4.4.         <br>&nbsp;
+        Topics:  Ideal, models of real diodes under    <br>&nbsp;
+		fwd and rev bias, rev breakdown.               <br>&nbsp;
+		Read 4.1 through 4.4.                          <br>&nbsp;
 		                                               <br>&nbsp;
-		Do *2.77, 2.85, 2.92, 2.126, D*2.127,          <br>&nbsp;
-		+4.2, +4.3, 4.4 parts a, b, f only,  <br>&nbsp;
-		Mathcad or Matlab etc. are recommended for     <br>&nbsp;
-		making plots for 4.4; +4.9, 4.18, 4.22 parts a,<br>&nbsp;
-		b, c, e only; *4.54.                           <br>&nbsp;
-		(Parts of this assignment will be spread to    <br>&nbsp;
-		future assignments.)                           <br>&nbsp;
+		+4.2, +4.3, 4.4 parts a, b, f only, +4.9, 4.18,<br>&nbsp;
+		4.22 parts a, b, c, e only; *4.54.             <br>&nbsp;
+		                                               <br>&nbsp;
+		One of 
+		<a href="https://www.gnu.org/software/octave/">Octave</a>, 
+		<a href="https://www.mathworks.com/products/matlab.html">Matlab</a>, 
+		<a href="http://fooplot.com">Fooplot</a>, 
+		<a href="https://www.desmos.com/">Desmos</a>,  <br>&nbsp;
+		<a href="https://www.ptc.com/en/products/mathcad">Mathcad</a>, 
+		etc. are recommended for making plots.       <br>&nbsp;
 		                                               <br>&nbsp;
 		Note <a href=
 		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P234"
 		>errata on problem 4.22</a>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 4
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        9/14
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        9/21
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!--<a href=
+        "https://dordt.instructure.com/files/94616116/download?download_frd=1"
+        >9/28</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  Op-amp DC imperfections, slew rate,   <br>&nbsp;
+		full-power bandwidth.                          <br>&nbsp;
+		Read 2.5 through 2-8.                          <br>&nbsp;
+		                                               <br>&nbsp;
+		<DO>Do 2.85, 2.92, 2.126, D*2.127.</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  3
@@ -129,7 +151,7 @@ PS                                                           <BR>
         >9/19</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Toppics: Op-amp configurations (inverting, sum,<br>&nbsp;
-		etc.), <br>&nbsp;
+		etc.), differential and instrumentation amps.  <br>&nbsp;
 		Read Chapter 2 Sections 2.1 through 2.4        <br>&nbsp;
 													   <br>&nbsp;
 		<DO>Do +2.7, +2.19, +D2.34, +*2.43, +D2.51, 2.62,  <br>&nbsp;
