Posted errata, pages 90-02 in sedra and smith

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -16,7 +16,7 @@ HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/eng
               DORDT COLLEGE ENGINEERING DEPARTMENT</b></A><br><a href=
 			  "../../err.htm"
                        >TEXTBOOK ERRATA</a><br>
-                    (last update 9/05/2018)<br> 
+                    (last update 9/15/2018)<br> 
                                <br>
     <img src="Sedra_Smith_7_Cover_120x150.jpg" width="120" height="150"
                    alt="Photo of textbook"><br>
@@ -96,6 +96,25 @@ Page 74,  Equation 2.9</b><br>
    &nbsp; &nbsp; &nbsp; &nbsp; <small><i>(Posted 9/13/2016)
                                              </i></small><br><br>
 
+                                             <A NAME="P90"></A><b>
+Pages 90-92,  All integrals</b><br>
+   An example of this errata is found in Equation 2.25 on page 90.<br>
+   The integral has an upper limit of <i>t</i>, but it also 
+   uses the symbol <i>t</i> as the variable of integration.  
+   The limit and the variable of integration cannot be 
+   one-and-the-same.  Change the variable of integration to &lambda;.
+   A corrected version of Equation 2.25 is<br>
+   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+   <img src="S_S_7_EQ2_25.png"><br>
+   Similar corrections are needed in five more instances as follows:<br>
+   Page 90, four lines from the top, two inline expressions<br>
+   Page 90, sixth line down, the displayed equation for <i>v<sub>C</sub></i>(<i>t</i>)<br>
+   Page 91, inside Figure 2.24(a), the displayed equation for <i>v<sub>O</sub></i>(<i>t</i>)<br>
+   Page 92, the integral near the middle of the blue display box of Example 2.5<br>
+   &nbsp; &nbsp; &nbsp; &nbsp; <small><i>(Posted 9/15/2018)
+                                             </i></small><br><br>
+
                                             <A NAME="P121"></A><b>
 Page 121,  Problem D2.34 part (d)</b><br>
    Add the word "Norton" so that part (d) reads as follows:<br>
@@ -108,14 +127,14 @@ Page 121,  Problem D2.34 part (d)</b><br>
                                              </i></small><br><br>
    
                                            <A NAME="P234"></A><b>
-Page 234,  Problem 4.22 Part (d)</b><br>
+Page 234,  Problem 4.22 part (d)</b><br>
    Delete part (d) from the problem.                         <br>
    (It is a duplicate of Part(b)) 
                            <small><i> &nbsp; &nbsp; &nbsp; &nbsp;
    (Posted 8/12/2016)                        </i></small><br><br>
 
                                           <A NAME="P241A"></A><b>
-Page 241,  Problem 4.77 Part (c)</b><br>
+Page 241,  Problem 4.77 part (c)</b><br>
    Add, "during conduction" to part (c) so that it reads,    <br>
    "(c) What is the average diode current during conduction?"<br>
                            <small><i> &nbsp; &nbsp; &nbsp; &nbsp;
@@ -272,7 +291,7 @@ Page 345, Problem D5.111 part (d).</b><br>
          (Posted, 12/04/2010.)              </i></small><br><br> -->
 
                                            <A NAME="P489"></A><b>
-Page 489, Problem D7.60 part (a).</b><br>
+Page 489, Problem D7.60 Part (a).</b><br>
    Change, "signal strength" to "signal voltage." <br>
    &nbsp; &nbsp; &nbsp; &nbsp; 
    <i><small>(Posted 8/17/2016)</small></i><br><br>
@@ -1253,7 +1272,7 @@ Page 498, Problem 7.120.</b><br>
 Appendix G, page 18, Problem G.9</b><br>
    For the BJT transistor assume <img src="beta_ital.gif" 
    alt="beta"> is infinite.                                    <br>
-   For both the MOSFET and the BJT ignore the Early effect.
+   For both the MOSFET and the BJT ignore the Early effect.<br>
    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
    <small><i>(Posted 8/16/2016)           </i></small><br><br>
 <!-- ----------------------------------------------------------- --> 
