--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/14/2018 2:58 pm)
+                               >(Last update: 9/15/2018 3:57 pm)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -134,7 +134,12 @@ PS                                                           <BR>
 		full-power bandwidth.                          <br>&nbsp;
 		Read 2.5 through 2-8.                          <br>&nbsp;
 		                                               <br>&nbsp;
-		<DO>Do 2.85, 2.92, 2.126, D*2.127.</DO>
+		<DO>Do 2.85, 2.92, 2.126, D*2.127.</DO>        <br>&nbsp;
+		                                               <br>&nbsp;
+        Note errata on <a href=
+        "../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P90"
+                        >Pages 90-92.</a>
+													   
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  3
