--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/15/2018 3:57 pm)
+                               >(Last update: 9/17/2018 2:37 pm)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -151,9 +151,9 @@ PS                                                           <BR>
         9/14
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"
-        >9/19</a><br>
+		<a href=
+        "https://dordt.instructure.com/files/134540373/download?download_frd=1"
+        >9/17</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Toppics: Op-amp configurations (inverting, sum,<br>&nbsp;
 		etc.), differential and instrumentation amps.  <br>&nbsp;
