--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -130,14 +130,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/134542749/download?download_frd=1"><!-- -->
-	  9/17<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/120977330/download?download_frd=1"><!-- -->
-      9/19<!-- --</a><!-- --><br><!-- --<a href=
+	  9/17<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/134709357/download?download_frd=1"><!-- -->
+      9/19<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
       9/21<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->P2.92, Miller Integrator, differeniator, offset voltage error<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->P2.92 again, Input bias currents, Input bias current offset<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
