--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -138,7 +138,10 @@ PS                                                           <BR>
 		                                               <br>&nbsp;
         Note errata on <a href=
         "../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P90"
-                        >Pages 90-92.</a>
+                        >Pages 90-92.</a>              <br>&nbsp;
+        Note errata on <a href=
+        "../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P130"
+                        >Problem 2.92</a>
 													   
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
