--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -16,7 +16,7 @@ HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/eng
               DORDT COLLEGE ENGINEERING DEPARTMENT</b></A><br><a href=
 			  "../../err.htm"
                        >TEXTBOOK ERRATA</a><br>
-                    (last update 9/15/2018)<br> 
+                    (last update 9/19/2018)<br> 
                                <br>
     <img src="Sedra_Smith_7_Cover_120x150.jpg" width="120" height="150"
                    alt="Photo of textbook"><br>
@@ -124,6 +124,15 @@ Page 121,  Problem D2.34 part (d)</b><br>
    <i>i</i><sub>L</sub>.                                     <br>
    Also see below for a <a href="#P121_A">clarification of Part (b)</a>. 
    &nbsp; &nbsp; &nbsp; &nbsp; <small><i>(Posted 8/12/2016)
+                                             </i></small><br><br>
+   
+                                            <A NAME="P130"></A><b>
+Page 130,  Problem D2.92</b><br>
+   In the fifth line of the problem statement &quot;3-dB&quot; 
+   should be &quot;&ndash;3-dB.&quot;  Alternatively, add the
+   word &quot;down&quot; so that the phrase reads, &quot;3 db
+   down frequency.&quot;
+   &nbsp; &nbsp; &nbsp; &nbsp; <small><i>(Posted 9/19/2018)
                                              </i></small><br><br>
    
                                            <A NAME="P234"></A><b>
