Posted final version of 322 PS#4

--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/19/2018 3:12 pm)
+                               >(Last update: 9/21/2018 9:17 am)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -97,12 +97,41 @@ PS                                                           <BR>
         "https://dordt.instructure.com/files/94616116/download?download_frd=1"
         >9/28</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        Topics:  Ideal, models of real diodes under    <br>&nbsp;
+        Topics:  Various models of real diodes under    <br>&nbsp;
 		fwd and rev bias, rev breakdown.               <br>&nbsp;
-		Read 4.1 through 4.4.                          <br>&nbsp;
+		Read 4.3 through 4.4.                          <br>&nbsp;
+		                                               <br>&nbsp;
+		*4.54, (more to be added later).               <br>&nbsp;
+		                                               <br>&nbsp;
+		One of 
+		<a href="https://www.gnu.org/software/octave/">Octave</a>, 
+		<a href="https://www.mathworks.com/products/matlab.html">Matlab</a>, 
+		<a href="http://fooplot.com">Fooplot</a>, 
+		<a href="https://www.desmos.com/">Desmos</a>,  <br>&nbsp;
+		<a href="https://www.ptc.com/en/products/mathcad">Mathcad</a>, 
+		etc. are recommended for making plots.
+		
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ &nbsp;
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        &nbsp;
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        &nbsp;
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!--<a href=
+        "https://dordt.instructure.com/files/94616116/download?download_frd=1"
+        >9/28</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  Ideal, models of real diodes under    <br>&nbsp;
+		fwd and rev bias, rev breakdown, Shockley model.<br>&nbsp;
+		Read 4.1 through 4.2.                          <br>&nbsp;
 		                                               <br>&nbsp;
 		+4.2, +4.3, 4.4 parts a, b, f only, +4.9, 4.18,<br>&nbsp;
-		4.22 parts a, b, c, e only; *4.54.             <br>&nbsp;
+		4.22 parts a, b, c, e only.                    <br>&nbsp;
 		                                               <br>&nbsp;
 		One of 
 		<a href="https://www.gnu.org/software/octave/">Octave</a>, 
