--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -132,13 +132,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/134542749/download?download_frd=1"><!-- -->
 	  9/17<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/134709357/download?download_frd=1"><!-- -->
-      9/19<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
-      9/21<!-- --</a><!-- --></td>
+      9/19<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/134864325/download?download_frd=1"><!-- -->
+      9/21<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->P2.92, Miller Integrator, differeniator, offset voltage error<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->P2.92 again, Input bias currents, Input bias current offset<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Slew rate, full-power bandwidth, ideal diodes, guestimating the state<!--end comment--></td>  
    </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
