--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -130,8 +130,8 @@ PS                                                           <BR>
 		fwd and rev bias, rev breakdown, Shockley model.<br>&nbsp;
 		Read 4.1 through 4.2.                          <br>&nbsp;
 		                                               <br>&nbsp;
-		+4.2, +4.3, 4.4 parts a, b, f only, +4.9, 4.18,<br>&nbsp;
-		4.22 parts a, b, c, e only.                    <br>&nbsp;
+		<DO>+4.2, +4.3, 4.4 parts a, b, f only, +4.9, 4.18,<br>&nbsp;
+		4.22 parts a, b, c, e only.</DO>               <br>&nbsp;
 		                                               <br>&nbsp;
 		One of 
 		<a href="https://www.gnu.org/software/octave/">Octave</a>, 
