--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/21/2018 9:23 am)
+                               >(Last update: 9/22/2018 5:29 pm)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -155,8 +155,8 @@ PS                                                           <BR>
         9/21
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/94616116/download?download_frd=1"
+		<a href=
+        "https://dordt.instructure.com/files/134897875/download?download_frd=1"
         >9/28</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Op-amp DC imperfections, slew rate,   <br>&nbsp;
